・バッチ、パワーシェル ・良いコード悪いコード完結

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -14,27 +14,39 @@ rem [コメント]
 
 ---
 
-## remでもエラーとなる
+## コメントがエラーとなる
 
-2バイト文字で2行以上の処理の場合警告が表示される。  
+文字化けする環境
 
-対処法  
-ダブルコーテーションで囲えばよい。  
+- バッチファイルの文字コードがUTF-8  
+- 改行コードがCRLFになっている  
+- 日本語のような全角文字が含まれている  
+
+日本語版 Windows のコマンドプロンプトは Shift-JIS の文字コードを前提として動作させるようになっている模様。  
+なので、多くの場合は、文字コードを UTF-8 に明示すれば正常に動作するようになる。  
+
+■ **対処法1 文字コードをバッチ内で指定**
+
+バッチの先頭に以下のコマンドを追記
+
+`chcp 65001`
+
+`chcp`コマンドはバッチファイルの文字コードを明示するコマンド。  
+文字コードを明示した上で、後続の処理を実行させる。  
+
+|コードページ番号|文字コード|
+|---|---|
+|65001 | UTF-8     |
+|932   | Shift-JIS |
+|1200  | UTF-16    |
+
+■ **対処法2 remの内容をダブルクォーテーションで囲う**
 
 ``` batch
 @echo off
-rem 自己完結型でバンドルを発行する
-rem 自己完結型でバンドルを発行する
-
-pause > nul
-```
-
-上記バッチを実行すると以下のような警告が表示される。  
-どちらもダブルコーテーションで囲えば解決する。  
-
-``` txt
-'ｧ繝舌Φ繝峨Ν繧堤匱陦後☆繧・' は、内部コマンドまたは外部コマンド、
-操作可能なプログラムまたはバッチ ファイルとして認識されていません。
+chcp 65001
+rem "あ"
+rem "あ"
 ```
 
 [UTF-8のバッチファイルが文字化けする時の対処3選](https://nayutari.com/batch-utf8)  
