--- a/GoodCode_BadCode/1.悪しき構造の弊害を知覚する.md
+++ b/GoodCode_BadCode/1.悪しき構造の弊害を知覚する.md
@@ -150,6 +150,9 @@ public class ConstractManager {
 他にも税込み計算ロジックがあるのでは？と推測して調べると、数十か所で税込み計算ロジックが実装されていました。  
 
 ``` mermaid
+---
+title: 図1.1 データクラスが原因の重複
+---
 classDiagram
     direction RL
 
@@ -225,6 +228,7 @@ MessageManager --> ContractAmount
 
 ``` java
 // リスト1.7
+// 生焼けオブジェクト
 
 ContractAmount amount = new ContractAmount();
 _ = amount.salesTaxRate.toString();
@@ -248,6 +252,7 @@ ContractAmountが初期化の必要なクラスであることを利用側が知
 
 ``` java
 // リスト1.8
+// 不正値を混入可能
 
 ContractAmount amount = new ContractAmount();
 _ = amount.salesTaxRate.toString();
@@ -256,10 +261,9 @@ _ = amount.salesTaxRate.toString();
 不正値が混入しないように、データクラスの利用側でバリデーションロジックを実装したとする。  
 しかし、税込み計算ロジックと同様に、バリデーションロジックの重複コードがあちこちに記述される可能性がある。  
 
----
----
+バリデーションに仕様変更が生じた場合、今度はバリデーションロジックに関して、低凝集で引き起こされる弊害…、すなわち修正漏れや可読性低下が発生する事だろう。  
 
-## データクラスが引き起こす弊害まとめ
+データクラスが引き起こす弊害まとめてみる。  
 
 - 重複コード  
 - 修正漏れ  
@@ -268,7 +272,7 @@ _ = amount.salesTaxRate.toString();
 - 不正値の混入  
 
 データクラス1つだけでここまでの弊害が発生しうる。  
-可読性が低下し、総じて正確に変更できるまでの時間がかかり、開発生産性が低下してしまう。  
+可読性が低下し、総じて正確に変更できるまでの時間がかかり、**開発生産性が低下してしまう**。  
 
 ---
 ---
