--- a/GoodCode_BadCode/14.リファクタリング.md
+++ b/GoodCode_BadCode/14.リファクタリング.md
@@ -1,1 +1,930 @@
 # 14. リファクタリング 既存コードを成長に導く技
+
+新規にコードを追加する場合は、あるべき方針に従って設計実装を進めればよいだろう。  
+一方、プロダクトに実装済みの既存コードが粗悪な構造の場合、どうすればよいだろうか。  
+それにはリファクタリングで対処する。  
+
+---
+---
+
+## 14.1 リファクタリングの流れ
+
+**リファクタリング**とは、外から見た挙動を変えずに、構造を整理する事を言う。  
+
+リファクタリングはコードを変更するため、挙動が変わってしまうとバグになる。  
+挙動が変わっていないことを担保する手段としてユニットテストなどがある。  
+それらは後述するとして、まずはリファクタリングによるコード変更の一連の流れを説明する。  
+
+Webコミックサービスのロジックを例にする。  
+Webコミックサービスには、サービス内でのみ利用可能な購入ポイントを使って、コミックを購入するものがある。  
+以下の条件をすべて満たす場合、コミックの購入決済ができる仕様とする。  
+
+- 購入者のアカウントが有効であること  
+- 購入対象のコミックが現在取り扱い中であること  
+- 購入者の所持ポイントがコミックの購入ポイント以上であること  
+
+リスト14.1は購入決済を表現するクラスであり、プロダクトにすでに実装済みであるとする。  
+
+``` java
+// リスト14.1
+// リファクタリング対象のコード
+
+class PurchasePointPayment {
+    final CustomerId customerId;          // 購入者のID
+    final ComitId comicId;                // 購入するWebコミックのID
+    final PurchasePoint consumptionPoint; // 購入で消費するポイント
+    final LocalDateTime paymentDateTime;  // 購入日時
+
+    PurchasePointPayment(final Customer customer,final Comic comic) {
+        if (customer.isEnabled()) {
+            customerId = customer.id;
+            if (comic.isEnabled()) {
+                comicId = comic.id;
+                if (comic.currentPurchasePoint.amount <= customer.possessionPoint.amount) {
+                    consumptionPoint = comic.currentPurchasePoint;
+                    paymentDateTime = LocalDateTime.now();
+                } else {
+                    throw new RuntimeException("所持ポイントが不足しています。");
+                }
+            } else {
+                throw new IllegalArgumentException("現在取り扱いのできないコミックです。");
+            }
+        } else {
+            throw new IllegalArgumentException("有効な購入者ではありません。");
+        }
+    }
+}
+```
+
+---
+
+### 14.1.1 ネストを解消し、見通しを良くする
+
+PurchasePointPaymentクラスのコンストラクタでは、購入決済の条件をチェックしている。  
+条件を判定するif文が多重にネストしている。  
+非常に見通しの悪い構造となっている。  
+
+if文のネスト構造の解消には、早期リターン(6.1)と同様の考え方で、条件を反転させる方法が有効となる。  
+最初のif(customer.isEnabled())を反転し、同じ挙動になるようロジックを整理する。  
+他の二つのif文も条件を判定して整理する。  
+
+``` java
+// リスト14.2 & 14.3
+// 条件を反転してネスト解消 & 他のif文も条件反転して整理
+
+class PurchasePointPayment {
+    final CustomerId customerId;          // 購入者のID
+    final ComitId comicId;                // 購入するWebコミックのID
+    final PurchasePoint consumptionPoint; // 購入で消費するポイント
+    final LocalDateTime paymentDateTime;  // 購入日時
+
+    PurchasePointPayment(final Customer customer,final Comic comic) {
+        if (!customer.isEnabled()) {
+            throw new IllegalArgumentException("有効な購入者ではありません。");
+        }
+        customerId = customer.id;
+        if (!comic.isEnabled()) {
+            throw new IllegalArgumentException("現在取り扱いのできないコミックです。");
+        }
+        comicId = comic.id;
+        if (customer.possessionPoint.amount < comic.currentPurchasePoint.amount) {
+            throw new RuntimeException("所持ポイントが不足しています。");
+        }
+        consumptionPoint = comic.currentPurchasePoint;
+        paymentDateTime = LocalDateTime.now();
+    }
+}
+```
+
+---
+
+### 14.1.2 意味のある単位にロジックをまとめる
+
+決済の条件をチェックしている途中でcusomterIdとcomicIdに値を代入している。  
+違うことを交互にやっていて、ロジックにまとまりがない。  
+
+条件チェックと値の代入ロジックをそれぞれまとめる。  
+条件チェックが全て完了した後に値を代入するよう、ロジックの順番を入れ替える。  
+
+``` java
+// リスト14.4
+// 条件チェックと値の代入をそれぞれまとめる
+
+class PurchasePointPayment {
+    final CustomerId customerId;          // 購入者のID
+    final ComitId comicId;                // 購入するWebコミックのID
+    final PurchasePoint consumptionPoint; // 購入で消費するポイント
+    final LocalDateTime paymentDateTime;  // 購入日時
+
+    PurchasePointPayment(final Customer customer,final Comic comic) {
+        if (!customer.isEnabled()) {
+            throw new IllegalArgumentException("有効な購入者ではありません。");
+        }
+        if (!comic.isEnabled()) {
+            throw new IllegalArgumentException("現在取り扱いのできないコミックです。");
+        }
+        if (customer.possessionPoint.amount < comic.currentPurchasePoint.amount) {
+            throw new RuntimeException("所持ポイントが不足しています。");
+        }
+        customerId = customer.id;
+        comicId = comic.id;
+        consumptionPoint = comic.currentPurchasePoint;
+        paymentDateTime = LocalDateTime.now();
+    }
+}
+```
+
+ロジックの見通しがかなり良くなった。  
+しかし、まだいくつか改善可能な箇所がある。  
+
+---
+
+### 14.1.3 条件を読みやすくする
+
+有効でない購入者アカウントをif(!customer.isEnabled())で判定している。  
+論理否定`!`を用いており、わざわざ「有効ではない」と読み替える必要があり、若干の読みにくさがある。  
+
+そこで、無効なアカウントであるかを返すisDisabledメソッドをCustomerクラスに追加する。  
+Comicクラスも同様にisDisabledメソッドを追加する。  
+PurchasePointPaymentコンストラクタでは、それぞれisDsiabledメソッドを呼び出す形にする。  
+
+``` java
+// リスト14.5
+// 論理否定がなくなり、読みやすさが改善
+
+class PurchasePointPayment {
+    PurchasePointPayment(final Customer customer,final Comic comic) {
+        if (customer.isDisabled()) {
+            throw new IllegalArgumentException("有効な購入者ではありません。");
+        }
+        if (comic.isDisabled()) {
+            throw new IllegalArgumentException("現在取り扱いのできないコミックです。");
+        }
+    }
+}
+```
+
+---
+
+### 14.1.4 べた書きロジックを目的を表すメソッドに置き換える
+
+PurchasePointPaymentコンストラクタでは、if(customer.possessionPoint.amount < comic.currentPurchasePoint.amount)で所持ポイントが不足しているかを判定している。  
+しかし、このロジックだけを見た場合、目的がよくわからない。  
+
+ロジックはべた書きせず、目的を表すメソッドにまとめる。  
+所持ポイントが不足しているかを返すisShortOfPointメソッドをCustomerクラスに用意する。  
+
+``` java
+// リスト14.6
+// 目的を表すメソッドを用意する
+
+class Customer {
+    final CustomerId id;
+    final PurchasePoint possessionPoint;
+
+    // @param comic 購入対象のWebコミック
+    // @return 所持ポイントが不足している場合true
+    boolean isShortOfPoint(Comic comic) {
+        return possessionPoint.amount < comic.currentPurchasePoint.amount;
+    }
+}
+```
+
+PurchasePointPaymentコンストラクタ側のべた書きロジックをCustomer.isShortofPointに置き換える。  
+
+``` java
+// リスト14.7
+// 目的を表すメソッドに置き換え
+
+class PurchasePointPayment {
+    final CustomerId customerId;          // 購入者のID
+    final ComitId comicId;                // 購入するWebコミックのID
+    final PurchasePoint consumptionPoint; // 購入で消費するポイント
+    final LocalDateTime paymentDateTime;  // 購入日時
+
+    PurchasePointPayment(final Customer customer,final Comic comic) {
+        if (customer.isDisabled()) {
+            throw new IllegalArgumentException("有効な購入者ではありません。");
+        }
+        if (comic.isDisabled()) {
+            throw new IllegalArgumentException("現在取り扱いのできないコミックです。");
+        }
+        if (customer.isShortOfPoint(comic)) {
+            throw new RuntimeException("所持ポイントが不足しています。");
+        }
+
+        customerId = customer.id;
+        comicId = comic.id;
+        consumptionPoint = comic.currentPurchasePoint;
+        paymentDateTime = LocalDateTime.now();
+    }
+}
+```
+
+以上がリファクタリングでコードを整理する簡単な流れとなる。  
+しかし、実際のプロダクションコードはもっと複雑で、リファクタリングの難度は高い。  
+いくら注意深くリファクタリングしても、人間の注意力には限界がある。  
+うっかりミスで挙動が変わり、バグを埋め込んでしまうかもしれない。  
+安全にリファクタリングするにはどうすればいいだろうか。  
+
+---
+---
+
+## 14.2 ユニットテストでリファクタリングのミスを防ぐ
+
+最も確実性の高い手段の一つにユニットテストがある。  
+ユニットテストとは小さな機能単位で動作検証するテストの総称である。  
+テストフレームワークやテストコードを用い、メソッド単位で動作検証する手段をもっぱら意味する。  
+ここでのユニットテストも、テストコードを用いたテストと位置付ける。  
+「リファクタリングにはユニットテストが必須!」と言われるぐらい、リファクタリングはテストとセットで語られる。  
+ところで、悪魔を呼び寄せるような邪悪なコードには、テストコードが書かれていないことが多い。  
+このようなコードをリファクタするには、まずはテストコードを用意しなければならない。  
+テストのないプロダクションコードに対してテストコードを書き、そのうえでリファクタリングする手順を説明する。  
+
+リスト14.8は、ECサイトにおける商品の配送料を計算して返すメソッドとなる。  
+
+``` java
+// リスト14.8
+// リファクタリング対象のコード
+
+// 配送管理クラス
+public class DeliveryManager {
+    // 配送料を返す
+    // @param products 配送対象の商品リスト
+    // @return 配送料
+    public static int deliveryCharge(List<Product> products) {
+        int charge = 0;
+        int totalPrice = 0;
+        for (Product each : products) {
+            totalPrice += each.price;
+        }
+        if (totalPrice < 2000) {
+            charge = 500;
+        }
+        else {
+            charge = 0;
+        }
+        return charge;
+    }
+}
+```
+
+---
+
+### 14.2.1 コードの課題を整理する
+
+ECサイトには、一度に購入した商品の合計金額に応じて配送料が変わる仕様のものがある。  
+そうした配送料を計算するのがこのメソッドになる。  
+このメソッドは構造上いくつか課題がある。  
+どうリファクタリングするか、まずは課題及びあるべき構造を考えてみる。  
+
+このメソッドはstaticとして定義されている。  
+staticメソッドはデータとデータを操作するロジックをバラバラに定義可能な構造であり、低凝集に陥りがちとなる。  
+そもそも「配送料」は金額を表現する概念の一つなので、値オブジェクトとして設計したほうが良さそうである。  
+
+また、商品の合計金額をこのメソッド内で計算している。  
+合計金額は、買い物かごを閲覧する、発注操作するなど様々なユースケースでの利用が考えられる。  
+このメソッドのように、個別のユースケースでわざわざ計算すると、計算ロジックの重複を許してしまう。  
+仕様変更時に修正漏れが発生しやすく、変更に対して脆くなってしまう。  
+合計金額計算はList型のロジック操作を伴うため、ファーストクラスコレクションパターン(7.3.1)で設計すべきだろう。  
+
+---
+
+### 14.2.2 テストコードを用いたリファクタリングの流れ
+
+テストコードを用いたリファクタリング方法を説明する。  
+安全にリファクタするためのテストコードの差し込み方法は色々あるが、ここでは以下の手順を採る。  
+なお、これはあるべき構造がある程度わかっている場合に有効な手法となる。  
+
+1. あるべき構造のひな型クラスをある程度作る  
+2. ひな型クラスに対してテストコードを書く  
+3. テストを失敗させる  
+4. テストを成功させるための最低限のコードを書く  
+5. ひな型クラス内部でリファクタリング対象のコードを呼び出す  
+6. テストが成功するよう、圧べき構造へロジックを少しずつリファクタしていく  
+
+#### あるべき構造のひな型を作っておく
+
+著者が好んで用いているアプローチとして、まず、あるべき構造のひな型クラスを作る。  
+購入する商品一覧、すなわち買い物かごを表現するクラスのひな型を作る。  
+
+``` java
+// リスト14.9
+// あるべき構造のひな型を作成
+
+// 買い物かご
+class ShoppingCart {
+    final List<Product> products;
+
+    ShoppingCart() {
+        products = new ArrayList<Product>();
+    }
+
+    private ShoppingCart(List<Product> products) {
+        this.products = products;
+    }
+
+    ShoppingCart add(final Product product) {
+        final List<Product> adding = new ArrayList<>(products);
+        adding.add(product);
+        return new ShoppingCart(adding);
+    }
+}
+```
+
+なお、商品クラスは次の実装であるとする。  
+
+``` java
+class Product {
+    final int id;
+    final String name;
+    final int price;
+
+    Product(final int id, final String name, final int price) {
+        this.id = id;
+        this.name = name;
+        this.price = price;
+    }
+}
+```
+
+次に、配送料を表現するクラスのひな型を作る。  
+合計金額計算ロジックはShoppingCartクラスに持たせることを前提とし、コンストラクタにはShoppingCartのインスタンスを渡すものとする。  
+
+``` java
+// リスト14.11
+// 配送料を表現するクラスのひな型
+
+class DeliveryCharge {
+    final int amount;
+
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        amount = -1;
+    }
+}
+```
+
+この段階でのShoppingCartとDeliveryChargeは仕様を満たすものでは無い。  
+これらクラスに対してテストコードを書き、徐々にDeliveryManagerからロジックを移動して完成へ導くのだ。  
+
+#### テストコードを書く
+
+テストコードを書きます。  
+配送料について、以下の仕様が分かっているものとする。  
+
+- 商品の合計金額が2000円未満の場合、配送料は500円。  
+- 商品の合計金額が2000円以上の場合、配送料は無料。  
+
+これらの仕様を満たすテストコードを書く。  
+テストフレームワークにはJUnitを用いるものとする。  
+
+``` java
+// リスト14.12
+// ひな型クラスに対してテストコードを書く
+
+class DeliveryChargeTest {
+    // 商品の合計金額が2000円未満の場合、配送料は500円
+    @Test
+    void payCharge() {
+        ShoppingCart emptyCart = new ShoppingCart();
+        ShoppingCart oneProductAdded = emptyCart.add(new Product(1,"商品A",500));
+        ShoppingCart twoProductAdded = oneProductAdded.add(new Product(2,"商品B",1499));
+        DeliveryCharge charge = new DeliveryCharge(twoProductAdded);
+
+        assertEquals(500, chage.amount);
+    }
+
+    // 商品の合計金額が2000円以上の場合、配送料は無料
+    @Test
+    void payCharge() {
+        ShoppingCart emptyCart = new ShoppingCart();
+        ShoppingCart oneProductAdded = emptyCart.add(new Product(1,"商品A",500));
+        ShoppingCart twoProductAdded = oneProductAdded.add(new Product(2,"商品B",1500));
+        DeliveryCharge charge = new DeliveryCharge(twoProductAdded);
+
+        assertEquals(0, chage.amount);
+    }
+}
+```
+
+#### テストを失敗させる
+
+ユニットテストは、プロダクションコードを実装する前に、テストの失敗と成功を確認しなければならない。  
+なぜなら正しく失敗、成功できないと、テストコードまたはプロダクションコードに誤りがある可能性があるためである。  
+
+まずはテストを失敗させる。  
+この段階でテストを実行すると、2つとも失敗する。  
+失敗確認はこれでOKである。  
+
+#### テストを成功させる
+
+次にテストを成功させる。  
+成功させるには、いきなり本実装するのではなく、最低限成功させるだけの暫定的なプロダクションコードを実装する。  
+
+というわけで、DeliveryChargeクラスを書き換える。  
+
+``` java
+// リスト14.13
+// テストを成功させる最低限のコードを書く
+
+class DeliveryCharge {
+    final int amount;
+
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        int totalProce = shoppingCart.products.get(0).price + shoppingCart.products.get(1).price;
+        if (totalPrice < 2000) {
+            amount = 500;
+        }
+        else {
+            amount = 0;
+        }
+    }
+}
+```
+
+コードとしてはいびつではあるが、これでテストは成功する。  
+
+#### リファクタリングを実施する
+
+テストコードの動作確認が済んだところで、ようやくリファクタリングに取り掛かる。  
+リファクタリング対象のDeliveryManager.deliveryChargeメソッドをDeliveryChargeクラスのコンストラクタで呼び出す。  
+
+``` java
+// リスト14.14
+// ひな型からリファクタリング対象のロジックを呼び出し
+
+class DeliveryCharge {
+    final int amount;
+
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        amount = DeliveryManager.deliveryCharge(shoppingCart.products);
+    }
+}
+```
+
+この段階でテスト実行すると成功する。  
+ここから少しずつリファクタリングする。  
+
+DeloveryManager.deliveryChargeメソッド内の、商品合計計算ロジックをShoppingCartクラスのtotalPriceメソッドとして実装する。  
+
+``` java
+// リスト14.15
+// 合計金額の計算ロジックをひな型へコピー
+
+class ShoppingCart {
+    // 省略
+
+    // @return 商品の合計金額
+    int totalPrice() {
+        int amount = 0;
+        for (Product each : products) {
+            amount += each.price;
+        }
+        return amount;
+    }
+}
+```
+
+DeliveryManager.deliveryChargeメソッドにはShoppingCartのインスタンスを渡すよう引数を変更する。  
+さらに、商品の合計金額計算ロジックをShoppingCart.totalPriceメソッドへ置き換える。  
+
+``` java
+// リスト14.16
+// 引数の型やロジックをリファクタリング後の型(ShoppingCart)へ変更
+
+public class DeliveryManager {
+    public static int deliveryCharge(ShoppingCart shoppingCart) {
+        int charge = 0;
+        if (shoppingCart.totalPrice() < 2000){
+            charge = 500;
+        }
+        else {
+            charge = 0;
+        }
+        return charge;
+    }
+}
+```
+
+DeliveryManager.deliveryChargeメソッドの引数を変更したので、呼び出し側のDeliveryChargeクラスも変更する。  
+
+``` java
+// リスト14.17
+// 引数の型を変更
+
+class DeliveryCharge {
+    final int amount;
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        amount = DeliveryManager.deliveryCharge(shoppingCart);
+    }
+}
+```
+
+ShoppingCartクラスのインスタンス変数productsは、クラス外部のどこからも参照されていないですし、外部から勝手にList要素が変更されるのは危険なので、privateに変更する。  
+
+``` java
+// リスト14.18
+// インスタンス変数をprivateへ変更
+
+class ShoppingCart {
+    private final List<Product> products;
+}
+```
+
+ここで一旦テストを実行し、成功を確認する。  
+次にDeliveryManager.deliveryChargeメソッドのロジックをDeliveryChargeクラスのコンストラクタへ丸々コピーする。  
+加えてテストが通るように、配送料の金額値代入箇所をインスタンス変数amountへ変更する。  
+
+``` java
+// リスト14.19
+// ロジックをコピーし、整える
+
+class DeliveryCharge {
+    final int amount;
+
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        if (shoppingCart.totalPrice() < 2000) {
+            amount = 500;
+        }
+        else {
+            amount = 0;
+        }
+    }
+}
+```
+
+ここでテストを実行し、成功させる。  
+ここまで来るとDeliveryManager.deliveryChargeメソッドは不要になるので削除する。  
+
+DeliveryChargeクラスはまだブラッシュアップ可能。  
+2000,500,0といったマジックナンバーが埋め込まれている。  
+適切な名前を付与した定数に置き換える。  
+
+``` java
+// リスト14.20
+// マジックナンバーを定数へ書き換え
+
+class DeliveryCharge {
+    private static final int CHARGE_FREE_THRESHOLD = 2000;
+    private static final int PAY_CHARGE = 500;
+    private static final int CHARGE_FREE = 0;
+    final int amount;
+
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        if (shoppingCart.totalPrice() < CHARGE_FREE_THRESHOLD) {
+            amount = PAY_CHARGE;
+        }
+        else {
+            amount = CHARGE_FREE;
+        }
+    }
+}
+```
+
+好みが分かれるところだろうが、条件分岐を参考演算子に書き換えても良いだろう。  
+最終的なプロダクションコードがリスト14.21,リスト14.22となる。  
+
+``` java
+// リスト14.21
+// 配送料クラスの最終形
+
+// 配送料
+class DeliveryCharge {
+    private static final int CHARGE_FREE_THRESHOLD = 2000;
+    private static final int PAY_CHARGE = 500;
+    private static final int CHARGE_FREE = 0;
+    final int amount;
+
+    // @param shoppingCart 買い物かご
+    DeliveryCharge(final ShoppingCart shoppingCart) {
+        amount = (shoppingCart.totalPrice() < CHARGE_FREE_THRESHOLD) ? PAY_CHARGE : CHARGE_FREE;
+    }
+}
+```
+
+``` java
+// リスト14.22
+// 買い物かごクラスの最終形
+
+// 買い物かご
+class ShoppingCart {
+    final List<Product> products;
+
+    ShoppingCart() {
+        products = new ArrayList<Product>();
+    }
+
+    private ShoppingCart(List<Product> products) {
+        this.products = products;
+    }
+
+    // 買い物かごに商品を追加する
+    // @param product 商品
+    // @return 商品が追加された買い物かご
+    ShoppingCart add(final Product product) {
+        final List<Product> adding = new ArrayList<>(products);
+        adding.add(product);
+        return new ShoppingCart(adding);
+    }
+
+    // @return 商品の合計金額
+    int totalPrice() {
+        int amount = 0;
+        for (Product each : products) {
+            amount += each.price;
+        }
+        return amount;
+    }
+}
+```
+
+``` mermaid
+---
+title:図14.1 リファクタリングによって整理されたクラス
+---
+classDiagram
+direction TB
+
+    class DeliveryCharge {
+        amount : int
+        DeliveryCharge(shoppingCart : ShoppingCart)
+    }
+    class ShoppingCart {
+        add(product : Product) ShoppingCart
+        totalPrice() int
+    }
+    class Product {
+        id : int
+        name : String
+        price : int
+    }
+    DeliveryCharge ..> ShoppingCart
+    ShoppingCart ..> "0..*" Product
+```
+
+最後にテストを実行、成功させ、リファクタリング完了となる。  
+リファクタリング作業の途中、不注意でロジックの書き換えをミスしても、テストの失敗ですぐに気が付けるので、安全にロジックを変更できる。  
+
+---
+---
+
+## 14.3 あやふやな仕様を理解するための分析方法
+
+ユニットテストを用いたリファクタリングは、初めから仕様が分かっている前提があったので、テストを書けた。  
+一方で実際の開発では、仕様が分からない場合がある。  
+仕様が分からなければ、安全にリファクタリングするためのテストコードを書けない。  
+どうすればいいだろうか。  
+
+書籍「レガシーコード改善ガイド」には、テストがないコードにテストを追加する、安全にリファクタリングする方法について、多くのノウハウが記載されている。  
+その内の2つについて簡単に紹介する。  
+
+---
+
+### 14.3.1 仕様分析方法1 : 仕様化テスト
+
+例えば次のようなひどいコードがあったとする。  
+
+``` java
+// リスト14.23
+// 名前から意図が伝わらないひどいメソッド
+
+public class MoneyManager {
+    public static int calc(int v, boolean flag) {
+        // 省略
+    }
+}
+```
+
+calcメソッドは仕様が分からない。  
+MoneyManagerのクラスであることから、何か金額を計算するものであるようだが、メソッド名から類推が困難である。  
+引数もそれぞれなんであるかわからない。  
+これではテストコードを書きようがないし、まして安全にリファクタリングできそうにもない。  
+
+ここで活躍するのが**仕様化テスト**となる。  
+仕様化テストは、メソッドの仕様を分析するための手法である。  
+
+まず、適当な値を代入するテストを書く。  
+
+``` java
+// リスト14.24
+// 仕様化テスト
+
+@Test
+void characterizationTest() {
+    int actual = MoneyManager.calc(1000, false);
+    assetEquals(0, actual);
+}
+```
+
+テストは失敗したが、次の結果が得られた。  
+
+``` log
+// リスト14.25
+// どんな値を返してくるかが分かった
+
+org.opentest4j.AssertionFailedError:
+Expected : 0
+Actrual  : 1000
+```
+
+どうやら引数vの値がそのまま帰ってくることが分かった。  
+入力に対する正解が一つ分かった形である。  
+テストが成功するよう書き換える。  
+
+``` java
+// リスト14.26
+// テストが成功するよう書き換える
+
+@Test
+void characterizationTest() {
+    int actual = MoneyManager.calc(1000, false);
+    assertEquals(1000,actual);
+}
+```
+
+このようにcalcメソッドがどんな値を返してくるかを調べるため、テストをどんどん書き足していく。  
+すると、引数の組み合わせにより、それぞれ表14.1に示す値を返してくることが分かった。  
+
+表14.1 仕様化テストの結果一覧
+|引数v|引数flag|戻り値|
+|---|---|---|
+|1000|false|1000|
+|2000|false|2000|
+|3000|false|3000|
+|1000|true|1100|
+|2000|true|2200|
+|3000|true|3300|
+
+この結果から以下のことが類推できる。  
+
+- 引数flagがfalseの場合は、引数vの値をそのまま返している。  
+- 引数flagがtrueの場合は、引数vを使った何らかの計算をしている。  
+
+このcalcがMoneyManagerクラスのメソッドであることから、「これはもしかして、引数flagがtrueのときは税率10%の消費税込み金額を計算しているのでは？」とさらに類推を進める。  
+
+このように仕様化テストは分析したいメソッドのテストを書き、そのメソッドがどんな挙動を示すかを明らかにする方法となる。  
+
+実際には、仕様化テストだけですべての仕様を明らかにするのは難しい。  
+メソッド内部のロジックや、どういうユースケースから呼び出されているかなど、複合的な分析を経て仕様を明確化していくものだが、仕様の手がかりをつかむ有効な分析手段の一つでもある。  
+
+仕様化テストを含む様々な分析を経て、MoenyManager.calcメソッドが消費税込み計算をするものだと十分に確信が得られたとする。  
+そうすれば、税込み計算の仕様を満足するテストコードを書けるし、テストを利用して良い構造へ安全にリファクタできる。  
+
+---
+
+### 14.3.2 仕様分析方法2 : 試行リファクタリング
+
+配送料のコードをリファクタリングする例は、あるべき構造がある程度イメージできていた。  
+しかし、実際のプロダクションコードにはもっと複雑怪奇なものが多く、あるべき構造の類推が困難である。  
+また、そのようなコードは往々にして仕様が不明瞭であることが多い。  
+
+このような状況で有用な分析手法が、**試行リファクタリング**となる。  
+これは正式にリファクタリングするのではなく、ロジックの意味や構造を分析するためにお試しでリファクタリングするものとなる。  
+
+まずは対象のコードをリポジトリからチェックアウトする。  
+次にコードを書かずに、プロダクションコードをどんどんリファクタしていく。  
+コードが整理されて見通しが良くなると、以下の利点がある。  
+
+- 可読性が上がり、ロジックの仕様理解が進む。  
+- あるべき構造が見えてくる。どの範囲をメソッドやクラスに切り出せば良いかが見えてくる。つまり本番リファクタリングのゴールが見えてくる。  
+- 無駄なコード(デッドコード)が見えてくる。  
+- どのようにテストコードを書けば良いかが見えてくる。  
+
+試行リファクタリングによる分析結果に基づき、あるべき構造を策定し、テストコードを書いて正式にリファクタリングするとよいだろう。  
+なお、思考リファクタリングはあくまで分析用のロジック変更なので、リポジトリへマージしてはいけない。  
+使い終わったら破棄しよう。  
+
+---
+---
+
+## 14.4 IDEのリファクタリング機能
+
+IDEには便利なリファクタリング機能がある。  
+機械的に、正確にリファクタリングできるのが特徴である。  
+
+IntelliJ IDEAのリファクタリング機能のうち、2つを紹介する。  
+
+---
+
+### 14.4.1 リネーム(名前の変更)
+
+クラスやメソッド、変数の名前を一度にすべて、正確に変更するリファクタリング機能となる。  
+
+後は、IntelliJを使っていないと参考にならないので省略。  
+
+---
+
+### 14.4.2 メソッド抽出
+
+ロジックの一部をメソッドとして切り出す機能。  
+
+同じく略
+
+---
+---
+
+## 14.5 リファクタリングで注意すべきこと
+
+リファクタリングを実施する上で注意すべきことがいくつかある。  
+
+---
+
+### 14.5.1 機能追加とリファクタリングを同時にやらない
+
+機能追加とリファクタリングを同時にやってはいけない。  
+どちらか一方に専念しよう。  
+
+書籍「リファクタリング」では、この切り替えを「2つの帽子」と表現している。  
+作業するときは、「ファンクションの帽子」(機能追加)と「リファクタリングの帽子」どちらか1つだけをかぶっていることを意識しよう。  
+
+この帽子の切り替えを意識しないと、自分が今機能追加しているのか、それともリファクタリングしているのか混乱してしまう。  
+また、リポジトリへのコミットも、機能追加とリファクタリングを分けておかないと、そのコミットが機能追加のためだったのか、リファクタリングのためだったのか、後から見分けがつかなくなる。  
+バグが発生した場合に、機能追加またはリファクタリング、どちらの変更による原因なのか、分析を難しくしてしまう。  
+
+---
+
+### 14.5.2 スモールステップで実施する
+
+リファクタリングはスモールステップで実施しよう。  
+
+コミットは、どうリファクタしたか、違いがわかる単位にする。  
+たとえば、リファクタリングでメソッド名の変更とロジックの移動を実施する場合、コミットを分ける。  
+両方同じコミットに含めると、そのコミットが何のリファクタリングを実施したのか見分けが困難になる。  
+
+数回コミットしたら、PullRequestを作成するのがよいだろう。  
+変更が大量にあると、他のメンバーの変更コードとコンフリクトする可能性があるためである。  
+また、リファクタしたコードに不備があった場合にロールバックが大変になる。  
+
+---
+
+### 14.5.3 無駄な仕様は削除することも視野に
+
+ソフトウェアの仕様は、利益に貢献するよう定められるものである。  
+一方で、ほとんど利益に貢献しなくなった仕様や、バグがある仕様、他の仕様と競合(または矛盾)している仕様も中には存在する。  
+こうした無駄が仕様がある状況では、リファクタリングはうまくいかない。  
+
+バグがある、矛盾しているコードをいくらリファクタリングしても、整合性のとれたコードには決して到達できない。  
+ほとんど利益に貢献しない仕様のコードに対して、わざわざ開発コストを割いて一生懸命リファクタしても、開発生産性の向上には貢献できない。  
+
+リファクタをしていると、あるコードが邪魔でうまくリファクタできないケースが度々ある。  
+邪魔なコードが無駄な仕様に関係する場合、対処を検討するコストが無駄になる。  
+
+従って、リファクタリングの前には無駄な仕様がないか、仕様の棚卸をするのも一考である。  
+無駄な仕様やコードをあらかじめ削除しておけば、より快適に、よりきれいにリファクタできるだろう。  
+
+---
+
+### コラム Railsアプリのリファクタリング
+
+著者はリファクタリング専門のエンジニアとして仕事をしている。  
+「サービスの技術的負債(15.2)をなんとか返済して、開発生産性を上げたい」というニーズを受けての仕事となる。  
+
+現在は、Ruby on Raild アプリのリファクタリングをしている模様。  
+
+エディタにはRubyMineを利用している。  
+強力なリファクタリング機能を有し、重宝している。  
+異常なコードを検出するインスペクション機能、クラスメンバーを一覧表示する構造ビュー、定義元へのジャンプ機能など便利機能が充実しており、リファクタリングにおいて手放せない存在となっている。  
+
+ところで、静的型付け言語である、C#を十数年経験してきた著者にとって、(あくまで個人的な印象であるが)Railsはかなりクセの強いフレームワークだと感じている模様。  
+C#でのリファクタリングノウハウがなかなか通用しないためである。  
+
+C#は静的型付けであるため、IDEの静的解析によりクラスやメソッドの呼び出し個所を正確に参照追跡可能である。  
+このおかげでもれなく正確に影響範囲を把握でき、リファクタリングの正確性が向上する。  
+
+一方、Railsは動的型付けのRubyをベースにしている。  
+現状のリファクタリング対象はRuby2系で、型情報がない。  
+クラスやメソッドの呼び出し個所を、C#と同じ制度で参照追跡できない。  
+例えばRubyMineにはクラスやメソッドの呼び出し個所を検索する機能がある。  
+検索機能は協力で、呼び出し個所をかなり正確にリストアップできる。  
+しかし、違うクラスの同名メソッドがヒットしたり、検索結果にノイズが混入したりすることがある。  
+このような場合、ヒットしたものが探しているメソッドと同じか、1つ1つ周囲のロジックから推測しなければならない。  
+
+また、RailsはActiveRecord(ORマッパー)を中心としたMVCフレームワークとなっている。  
+ActiveRecordはControllerやViewと密結合になることを是としていて、多くの便利機能がActiveRecordに集約している。  
+そのため、ActiveRecordには責務の異なる様々なロジックが実装されがちである。  
+
+ActiveRecordから責務の異なるロジックを引き剝がし、別のクラスとして分離するのが筆者のリファクタリングの主活動となっている。  
+ただ、引き剝がしたいロジックがActiveRecordの機能やgem(Rubyのライブラリ)の便利機能に依存しているために、引き剝がしが困難な状況に度々遭遇し、難儀している。  
+
+そのほか、Railsならではの制約があるなど様々な困難が伴う。  
+それでも着実にリファクタリングを進めている。  
+そしてリファクタリング設計においては、本書記載のテクニックをふんだんに利用している。  
+
+たとえば、金額と全く関係ない箇所に金額計算ロジックが実装されていれば、値オブジェクトとして切り出す。  
+is_a?メソッド(javaのtypeof)でクラスの型判定をしているか箇所は、たいていリスコフの置換原則に違反しているので、型判定しないよう適切に抽象化する。  
+
+Rubyは動的型付けとはいえオブジェクト指向言語であるため、オブジェクト指向設計のノウハウを活用できる強みがある。  
+Railsならではの対処もしている。  
+新たに分割したクラスやメソッドは、検索時にノイズが混じらないようにユニークな命名をしている。  
+名前の候補が決まったら、その名前でソースコードを全検索し、重複がないことを確認して命名するのである。  
+
+また、ActiveRecordからは無理にロジックを引き剥がそうとはしていない。  
+ActiveRecordと付随する便利機能だけを、他に影響を与えないようにうまくカプセル化し、それ以外のビジネスロジックを隔離・分割するといった手法を使っている。  
+
+杓子定規にリファクタリングせず、フレームワークの特性を考慮する。  
+このように切り出されたクラスは、責務が明瞭で変更影響が伝搬しにくい頑強な構造になっている。  
+さらに、静的型付け言語並みに検索性の優れたものに仕上がる。  
+
+リファクタリングの際は、言語やフレームワークの特性を考慮した設計や移行手順を策定するのが重要となる。  
+静的型付け言語に比べ、動的型付け言語のリファクタリングは高難易度である。  
+責務や構造がどうあるべきかを、より深く考える契機になり、自分の設計スキル向上につながっている実感がある模様。  
