--- a/GoodCode_BadCode/17.設計技術の理解の深め方.md
+++ b/GoodCode_BadCode/17.設計技術の理解の深め方.md
@@ -24,12 +24,16 @@
 
 ## 17.2 設計スキルを高める学び方
 
-- インプットは2、アウトプットは8  
-- 設計効果を必ず意識すること  
+実戦的な設計スキルを高めるための効率的な学び方を紹介する。  
 
 ---
 
-### インプットは2、アウトプットは8
+### 17.2.1 学習のための指針
+
+- インプットは2、アウトプットは8  
+- 設計効果を必ず意識すること  
+
+#### インプットは2、アウトプットは8
 
 1つ目の指針は、インプットよりアウトプットを重視する事。  
 インプットを2としたら、8ぐらいの割合でアウトプットする。  
@@ -45,9 +49,7 @@
 
 1つ新しい事を学んだら、すぐにコードを書いて自分なりに色々考え試行錯誤すべし。  
 
----
-
-### 設計効果を意識する
+#### 設計効果を意識する
 
 2つ目の指針は、設計の前後で必ず効果(設計効果)を確認すること。  
 
@@ -66,7 +68,7 @@
 
 ---
 
-### 悪魔の構造を見破る練習
+### 17.2.2 悪魔の構造を見破る練習
 
 より良い設計に使用とするモチベーション、危機感を高めるには、どこに悪魔が潜んでいるのか見破る目を養うことが第一歩。  
 内容と照らし合わせながら、普段開発に携わっているプロダクションコードを眺めてみよう。  
@@ -75,7 +77,7 @@
 
 ---
 
-### リファクタリングで大幅スキルアップ
+### 17.2.3 リファクタリングで大幅スキルアップ
 
 設計スキルを大幅に高める方法はリファクタリング。  
 リファクタリングの練習題材にするのは、普段仕事で使っているプロダクションコード。  
@@ -105,7 +107,55 @@ publicメソッドと違い、他との依存が小さいため。
 
 ---
 
-### 動くコードを書いたら、設計しなおしてからコミット
+### コラム C#と長き旅、そして設計への道
+
+著者はC#でのWindowsアプリ開発の経験が最も長い。  
+大学の研究室での経験年数も含めると数十年ある模様。  
+C#での開発経験を通じて、設計スキルが最も向上した模様。  
+
+著者は最初から設計に興味や知識があったわけではない。  
+C#を使った、とある開発プロジェクトに従事した際、ひどいレガシーコードに苦しめられたことがあった。  
+バグが頻発してプロジェクトは炎上し、残業続きの毎日となった。  
+次第に疲れ果て、「なぜこれほどバグが多いのだろう…。いったい何がまずいのだろう…。」と悩む日が続いた。  
+
+そんなある日、何か良い技術本はないかなと、職場の本棚をなんの気なしに漁って偶然手にした本があった。  
+それが『リファクタリング』という本であった。  
+「コードが理解しやすくなる」「バグが少なくなる」の記述を目にしたとき、「これだ!」と著者は衝撃を覚えた模様。  
+
+コード変更時にバグを埋め込みにくくする設計がある…、著者がソフトウェア設計にはじめて触れた日であり、大げさではなく著者の運命を本当に変えた本だった模様。  
+
+読んですぐ、学んだ内容を試したくなった。  
+プロダクションコードのリポジトリから練習用のブランチを切り、プロダクションコードを題材にリファクタリングの練習や試行錯誤を毎日積み重ねた。  
+この時期に設計スキルが最も伸びだ模様。  
+
+複雑で混乱したロジックがきれいに整頓されていく有様があまりに面白かったので、ますます設計への興味が高まって、『レガシーコード改善ガイド』や『ドメイン駆動設計』など、様々な設計技術書を買い漁った模様。  
+
+著者が現在リファクタしているRailsアプリに比べ、C#ははるかにリファクタリングしやすい。  
+C#は静的型付け言語であり、静的解析によりクラスやメソッドの呼び出し個所を正確に追跡できる。  
+IDEのVisualStudioは大変高機能である。  
+テストコードをすぐに書けるし、コード分析して品質を数値化できる。  
+書いたコードをクラス図として可視化もできる。  
+
+しかし、こうした恵まれた環境であっても、設計に理解がなければ、著者が経験してきたようにバグが頻発し、プロジェクトは炎上する。  
+設計品質向上の手段が初めから豊富に用意されているのに、宝の持ち腐れだ。  
+それどころか、残念なことに、IDEの便利機能があだとなり、品質低下の手助けになっていたケースがあった。  
+
+例えば、regionディレクティブというプリプロセッサ記述がある。  
+これは`#region`でくくった範囲の行を折りたたんで隠せる機能となる。  
+数百行に及ぶ長大なメソッドを折りたたんで隠す用途に、regionディレクティブが頻繁に使われていた。  
+好んで使っていた方々は「読みやすくなって便利」と口にしていたが、本来であれば長大なメソッドは小さく分割すべきである。  
+設計改善の必要性を覆い隠し、見て見ぬふりを助長していた。  
+
+また、「if文の終わり括弧を探す機能があるんですよ。これがあればif文のブロックに何千行書いても大丈夫ですよ。すごいと思いませんか!」と大喜びで語っていた人もいた。  
+長大で粗悪なコードを改善するのに、括弧を正確に探す機能は助けになる。  
+しかし、逆に粗悪なコードを書く手助けになっていたことがとても残念であった。  
+
+言語の特性や開発環境を生かすも殺すも、設計スキル次第である。  
+設計をよく学び、品質を正しく高めていこう。  
+
+---
+
+### 17.2.4 動くコードを書いたら、設計しなおしてからコミット
 
 開発時に設計スキルを高め、かつ品質の高いコードをコミットする方法となります。  
 
@@ -124,7 +174,7 @@ publicメソッドと違い、他との依存が小さいため。
 
 ---
 
-### 設計技術書でさらなる高みを目指そう
+### 17.2.5 設計技術書でさらなる高みを目指そう
 
 設計がうまくいくと楽しくなってくるもの。  
 その時こそ、成長のチャンスとなる。  
