--- a/GoodCode_BadCode/2.設計の初歩.md
+++ b/GoodCode_BadCode/2.設計の初歩.md
@@ -6,6 +6,7 @@
 
 ``` java
 // リスト2.1
+// いったい何のロジックだろう
 
 int d = 0;
 d = p1 + p2;
@@ -29,6 +30,7 @@ if (d < 0>) {
 
 ``` java
 // リスト2.2
+// 意図が伝わる名前をつけよう
 
 int damageAmount = 0;
 damageAmount = playerArmPower + playerWeaponPower; // ①
