整理、参考追加

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -56,7 +56,7 @@ rem "あ"
 ## for文内で変数を利用する場合の注意
 
 forブロック内では基本的に変数は使えない。  
-使いたい場合は遅延環境変数という仕組みを利用する。  
+使いたい場合は**遅延環境変数**という仕組みを利用する。  
 変数を使用する場合 `%` で囲うのではなく、 `!` で囲う。  
 
 例 :  
