・文字コード ・マイグレーション整理 ・テスト整理

--- a/ディレクトリ構成図記号.md
+++ b/ディレクトリ構成図記号.md
@@ -41,6 +41,20 @@ DbUpMigration
 ```
 
 ``` txt
+/dotnet-test-sample
+    dotnet-test-sample.sln
+    /SampleApp
+        SampleApp.cs
+        SampleApp.csproj
+    /SampleApp.Tests
+        SampleAppTests.cs
+        SampleApp.Tests.csproj
+    test.runsettings
+
+https://zenn.dev/gatabutsu/articles/18a9696e0854be
+```
+
+``` txt
 +---------+---------+
 | Column1 | Column2 |
 +---------+---------+
