--- a/Technology/文字コード.md
+++ b/Technology/文字コード.md
@@ -2,12 +2,10 @@
 
 ## ASCII (American Standard Code for Information Interchange)
 
-「ASCII（American Standard Code for Information Interchange）」は、コンピュータ上でテキストを扱うために使用される7ビットの文字コードです。  
-ASCIIには、制御文字（制御コード）や印字可能な文字が含まれています。  
+「ASCII（American Standard Code for Information Interchange）」は、コンピュータ上でテキストを扱うために使用される7ビットの文字コード。  
+ASCIIは、文字に対して一意に割り当てられた7ビットのコードを使用しているため、128個の文字を表現することができる。  
 
-ASCIIには、英字、数字、句読点、記号、空白文字などが含まれています。  
-ASCIIは、文字に対して一意に割り当てられた7ビットのコードを使用しているため、128個の文字を表現することができます。  
-ASCIIに含まれる文字には、大文字アルファベット（A～Z）、小文字アルファベット（a～z）、数字（0～9）、句読点（カンマ、ピリオド、クォート）、制御文字（改行、タブ、エンターなど）などがあります。  
+ASCIIに含まれる文字には、大文字アルファベット（A～Z）、小文字アルファベット（a～z）、数字（0～9）、句読点（カンマ、ピリオド、クォート）、制御文字（改行、タブ、エンターなど）などがある。  
 
 ASCIIは、初めて1963年にアメリカ合衆国で標準化され、以降世界中で広く使用されてきました。  
 ASCIIは、英語圏でのコンピュータの普及に大きく貢献した一方で、非英語圏の文字を扱うことができないため、国際的な利用には不向きであるという欠点がありました。  
