・記事整理 ・データベース設計 ・文字コード

--- a/Article/ノウハウ.md
+++ b/Article/ノウハウ.md
@@ -85,3 +85,12 @@ Taskerでwifi接続イベントを検出する。
 接続イベントに対してTaskerからMailTaskにアクションを送信する。MailTaskで設定しているメールアドレスに特定の形式のメールを送信する。  
 IFTTTで、設定したメールアドレスに対する特定のメールの受信を検知する。  
 イベントを検知したら設定しているSwitchBotに点灯命令を送信する。  
+
+---
+
+## ブラウザをメモ帳として使う
+
+以下をurlに入力する。  
+`data:text/html,<html contenteditable>`  
+
+[タブがメモ帳になる](https://otona-life.com/2022/07/08/126835/)  
