--- a/Article/技術力.md
+++ b/Article/技術力.md
@@ -1,5 +1,11 @@
 # 技術力
 
+>優秀なエンジニアなら、知らんことは正直に「知らないです」って答えるよ。  
+<https://twitter.com/ito_yusaku/status/1488421143426248708>
+
+[平均的プログラマ以前向けのスキルの指標](https://satob.hatenablog.com/entry/2018/10/26/012245)  
+[凄腕エンジニアと一緒に働いて学んだ技術以外の大切なこと - Qiita](https://qiita.com/TairaNozawa/items/59c6ef170fe3a2c4d910)  
+
 ---
 
 ## 技術力とは
@@ -35,7 +41,3 @@ _
 ですので「モダンな技術を使用していないから、転職ができない」ということはありません。  
 寧ろ、企業側は「所持している技術をどこまで使えるか」だったり「チーム力」を重視していると思います。（自分自身が「この技術を使いたい！」という理由で転職活動している場合は、別ですが）  
 [「モダンな技術を使用する＝正解」とは限らない](https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d)  
-
----
-
-[平均的プログラマ以前向けのスキルの指標](https://satob.hatenablog.com/entry/2018/10/26/012245)  
