・匿名型 ・参考整理

--- a/DB/DB設計/メモ.md
+++ b/DB/DB設計/メモ.md
@@ -2,7 +2,44 @@
 
 ---
 
-## データベース設計
-
 [【入門】データベース設計まとめ](https://qiita.com/KNR109/items/5d4a1954f3e8fd8eaae7)  
+
 [DB | bbh](https://bbh.bz/category/database/)  
+
+[テーブルを設計する上で考えておくと助かること - Qiita](https://qiita.com/Syn256/items/365438b1c25b09869383)  
+
+[【サルが書く】DB設計を達人に学んだのでまとめてみた](https://zenn.dev/hajime_shoji/articles/9abaaa5d10264ea7412c)  
+
+[【データベース】テーブル設計：履歴設計について | プログラミングマガジン](http://www.code-magagine.com/?p=14609)  
+
+[「SQLアンチパターン」を避けるためのチェックリスト①（DB論理設計編） - log4ketancho](https://www.ketancho.net/entry/2018/03/07/080000)  
+
+---
+
+サロゲートキーを使う場面とは？
+
+なぜ複合主キーは駄目なのか？
+
+サロゲートキーと複合主キー
+
+[サロゲートキーと複合主キー | DBFlute](http://dbflute.seasar.org/ja/manual/topic/dbdesign/surrogatekey.html)  
+
+[システム開発の本質とは～単独主キー主義 VS 複合主キー許容派～ | TALON](https://talon.jp/info/345/)  
+
+[主キー（primary key）を複数のカラムに、その名は複合主キー（composite primary key ） - ts0818のブログ](https://ts0818.hatenablog.com/entry/2017/02/04/162513)  
+
+[「サロゲートキー vs 複合キー」という間違った対立 - ネットの海の片隅で](https://osa.hatenablog.com/entry/2014/03/19/180330)  
+
+[DBのプライマリキーは複合主キーではなく、サロゲートキーを使うべし – Colorkrew Blog](https://blog.colorkrew.com/use_surrogatekey_is_primarykey_in_database/)  
+
+---
+
+集計テーブル 設計
+
+[第3回　テーブル設計のグレーゾーン～毒と薬は紙一重　（3）集計用のキー列をテーブルに持つべきか | gihyo.jp](https://gihyo.jp/dev/serial/01/sql_academy2/000303)  
+
+---
+
+インデックス
+
+[MySQLのインデックスをちゃんと理解してみた](https://zenn.dev/hk_206/articles/ec5f4e347caff4#%E3%82%A4%E3%83%B3%E3%83%87%E3%83%83%E3%82%AF%E3%82%B9%E3%82%92%E8%B2%BC%E3%82%8B%E3%81%A8%E3%81%8D%E3%81%AE%E6%B3%A8%E6%84%8F%E7%82%B9)  
