--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,9 +1,19 @@
 # 後でまとめたいやつら
 
+## Window関数
+
 [集約関数と分析関数の併用はできる？](https://teratail.com/questions/88199)  
 [SQL GROUP BY と PARTITION BYを同時に使う | 味方出版](https://mikata.mobi/2020/11/06/sql-group-by-%E3%81%A8-partition-by%E3%82%92%E5%90%8C%E6%99%82%E3%81%AB%E4%BD%BF%E3%81%86/)  
 [分析関数（OVER句,WINDOW句）｜SQL入門](https://excel-ubara.com/vba_sql/vba_SQL023.html)  
 [Window関数のFILTER句を極める](https://masahikosawada.github.io/2018/12/17/Window-Function-Filter-Clause/)  
+
+---
+
+## 技術駆動パッケージング
+
+[Package by Layer - mrsekut-p](https://scrapbox.io/mrsekut-p/Package_by_Layer)  
+[Package by Feature - mrsekut-p](https://scrapbox.io/mrsekut-p/Package_by_Feature)
+[ミノ駆動さんはTwitterを使っています: 「右(2枚目)は「技術駆動パッケージング」というアンチパターン。設計パターンごとにまとめるのは一見綺麗に整頓されているように見えるが、ドメインの関心事が設計パターンで分断されてしまい、業務概念ごとにまとまるべきものが低凝集になってしまう。特にマイクロサービス化を試みる場合非常に困る。」 / Twitter](https://twitter.com/minodriven/status/1148960876201836546?lang=ja)  
 
 ---
 
@@ -636,3 +646,7 @@ C# send post
 ・xaml,livetのエラー
 ・Converterの依存プロパティへの値の設定の仕方をまとめたい。
 ・コマンドまとめ
+
+[楽しいコーディングのための CUPID - SOLID 原則に対するアンチテーゼ - A Memorandum](https://blog1.mammb.com/entry/2022/09/02/193506)
+
+[CPUのアーキテクチャの違いまとめ（x86/x64/x86_64/AMD64/i386/i686とはなんなのか？） - フラミナル](https://blog.framinal.life/entry/2020/04/22/041548)  
