整理、参考追加

--- a/DB/DB設計/メモ.md
+++ b/DB/DB設計/メモ.md
@@ -32,6 +32,10 @@
 
 [DBのプライマリキーは複合主キーではなく、サロゲートキーを使うべし – Colorkrew Blog](https://blog.colorkrew.com/use_surrogatekey_is_primarykey_in_database/)  
 
+[サロゲートキー v.s. 複合主キーでは、前者を選ぶ - mrsekut-p](https://scrapbox.io/mrsekut-p/%E3%82%B5%E3%83%AD%E3%82%B2%E3%83%BC%E3%83%88%E3%82%AD%E3%83%BC_v.s._%E8%A4%87%E5%90%88%E4%B8%BB%E3%82%AD%E3%83%BC%E3%81%A7%E3%81%AF%E3%80%81%E5%89%8D%E8%80%85%E3%82%92%E9%81%B8%E3%81%B6)  
+[サロゲートキーによるDB設計について－ステキな一日](https://sutekina121.com/db-347-html/)  
+[複合主キーを避けるべき理由 - 虎塚](https://torazuka.hatenablog.com/entry/20110713/pk)  
+
 ---
 
 集計テーブル 設計
