・サロゲートキー ・整理 ・foreachでローカル関数

--- a/DB/DB設計/主キー.md
+++ b/DB/DB設計/主キー.md
@@ -1,4 +1,4 @@
-# キー関係
+# 主キー
 
 ---
 
@@ -79,3 +79,25 @@ create index [IX1]
 create index [IX2]
   on TestTable([Sort],[AnalysisType]);
 ```
+
+---
+
+## 複合主キーのインデックス
+
+4つで複合主キーとしているところで3つしか検索条件としない場合、インデックスは効くのか？  
+試してみた感じ、全てを含めたほうが、コストが低いことは観測出来た。  
+
+複合主キー 全部指定しないと効かない?  
+[複合主キーを避けるべき理由](https://torazuka.hatenablog.com/entry/20110713/pk)  
+[システム開発の本質とは～単独主キー主義 VS 複合主キー許容派～](https://talon.jp/info/345/)  
+
+Q. 複合主キーを設定した場合、自動的に複合インデックスとなるのか？
+A. なるっぽい。  
+
+主キーに対して自動的にインデックスは作成される。  
+複合主キーでも同様で、自動的に複合インデックスを作成する。  
+
+>データベースは、プライマリキーに対して自動的にインデックスを作成しますが、キーが複数の列からなる時は、さらに手動で調整をする 余地があります。  
+>この場合、データベースはプライマリキーの全ての列にいわゆる 連結インデックス(あるいはマルチカラム インデックス、複合インデックス)を作成します。  
+>複合インデックスの列の順番は、インデックスの使い勝手に大きな影響を及ぼすので、注意して決定する必要があります。  
+[use-the-index-luke](https://use-the-index-luke.com/ja/sql/where-clause/the-equals-operator/concatenated-keys)  
