--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -650,3 +650,8 @@ C# send post
 [楽しいコーディングのための CUPID - SOLID 原則に対するアンチテーゼ - A Memorandum](https://blog1.mammb.com/entry/2022/09/02/193506)
 
 [CPUのアーキテクチャの違いまとめ（x86/x64/x86_64/AMD64/i386/i686とはなんなのか？） - フラミナル](https://blog.framinal.life/entry/2020/04/22/041548)  
+
+[Redis 互換で25倍高速の Dragonfly を .NET で使ってみる | Qreat](https://qreat.tech/5486/)  
+
+[誰かのメモ: C# で SJIS を UTF-8 にエンコードする方法](https://private-static.blogspot.com/2014/06/c-sjis-utf-8.html)  
+[.NETで文字コードを気にせずにテキストファイルを読み込む | Qreat](https://qreat.tech/5407/)  
