--- a/GoodCode_BadCode/6.条件分岐.md
+++ b/GoodCode_BadCode/6.条件分岐.md
@@ -754,7 +754,7 @@ void magicDamage(final Magic magic) {
 }
 ```
 
-switch文を一切使わらずに魔法ごとの処理切り替えが実現できている。  
+switch文を一切使わずに魔法ごとの処理切り替えが実現できている。  
 magics.get(magicType)で、すべて一斉に切り替えているのが特徴。  
 処理ごとにわざわざswitch文を書いて分岐していない。  
 
