・サロゲートキー ・db整理

--- a/DB/SQLServer/トランザクションとエラー/トランザクション.md
+++ b/DB/SQLServer/トランザクションとエラー/トランザクション.md
@@ -137,3 +137,11 @@ END CATCH
 
 TransactionScopeを使うとこの仕組みを使う模様。  
 Linuxでは対応していないので、SQLServerをLinuxにもっていって、TransactionScopeを使うと死ぬ模様。  
+
+---
+
+## トランザクションの肥大化
+
+[トランザクションログ肥大化の対処方法 (log_reuse_wait_desc : LOG_BACKUP) [SQL Server]](https://www.nobtak.com/entry/tlogs2)  
+[【INDEX】SQL Server トランザクションログ肥大化 (原因／対処方法)](https://www.nobtak.com/tlogidx#2-%E3%83%88%E3%83%A9%E3%83%B3%E3%82%B6%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3%E3%83%AD%E3%82%B0%E3%82%92%E8%82%A5%E5%A4%A7%E5%8C%96%E3%81%95%E3%81%9B%E3%81%A6%E3%81%84%E3%82%8B%E3%82%AF%E3%82%A8%E3%83%AA%E3%81%AE%E7%89%B9%E5%AE%9A%E6%96%B9%E6%B3%95)  
+[トランザクションログを肥大化させているクエリの特定方法 [SQL Server]](https://www.nobtak.com/entry/tlogs0)  
