・linq文字列 ・データベース関係追加 ・整理

--- a/DB/SQLServer/構造関係/テーブル構造.md
+++ b/DB/SQLServer/構造関係/テーブル構造.md
@@ -2,6 +2,10 @@
 
 ---
 
+[オブジェクトの情報を取得するテーブル等 at SE の雑記](https://blog.engineer-memo.com/2013/05/11/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E6%83%85%E5%A0%B1%E3%82%92%E5%8F%96%E5%BE%97%E3%81%99%E3%82%8B%E3%83%86%E3%83%BC%E3%83%96%E3%83%AB%E7%AD%89/)  
+
+---
+
 ## テーブル構造を出力するクエリ
 
 とにかく全部吐き出す命令  
