--- a/VisualStudio/未分類.md
+++ b/VisualStudio/未分類.md
@@ -108,3 +108,11 @@ Visual Studio のソリューションは、"解決策" ではありません。
 名前からしてNuGetのパッケージだと思われる。  
 
 [C#でクラスライブラリを開発する時に必ずやった方が便利な設定](https://qiita.com/kojimadev/items/9d41e57da628dd74246d)  
+
+---
+
+## 便利機能
+
+条件付きブレークポイント
+
+[もうこれなしでは開発できないVisual Studioの10機能 - Qiita](https://qiita.com/gigadein/items/228305a1cc65651c3c2e)  
