--- a/DB/DB設計/インデックス.md
+++ b/DB/DB設計/インデックス.md
@@ -51,3 +51,6 @@ A.効くらしい。
 [インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)  
 
 [SQL Serverにおけるインデックスの再構成と再構築の性能比較](https://techblog.zozo.com/entry/sqlserver-index-reorganize-vs-rebuild)  
+
+>ここで問題になるのは複合インデクスの特徴の１つである、「キーとして構成されているカラムの全てが検索条件に指定されていなくても、キーの先頭から途中までのカラムが指定されていれば、インデクスが使われる」という点です。  
+[複合インデックスの落とし穴 | がっとな日々 | ガットコンピューター](https://www.gatc.jp/gat/it/it02dbindex.html#:~:text=%E8%A4%87%E5%90%88%E3%82%A4%E3%83%B3%E3%83%87%E3%82%AF%E3%82%B9%E3%81%A8%E3%81%AF%E3%80%81%E3%83%86%E3%83%BC%E3%83%96%E3%83%AB,%E3%81%99%E3%82%8B%E3%81%93%E3%81%A8%E3%82%92%E6%8C%87%E3%81%97%E3%81%BE%E3%81%99%E3%80%82&text=%E3%81%93%E3%81%AE%E3%80%8C%E3%82%A4%E3%83%B3%E3%83%87%E3%83%83%E3%82%AF%E3%82%B9%EF%BC%90%E3%80%8D%E3%81%8C%E8%A4%87%E5%90%88%E3%82%A4%E3%83%B3%E3%83%87%E3%82%AF%E3%82%B9%E3%81%A7%E3%81%99%E3%80%82)  
