--- a/Article/テスト.md
+++ b/Article/テスト.md
@@ -10,3 +10,5 @@
 ---
 
 [意識が高くないVisualStudioを使用した単体テストの自動化](https://qiita.com/mima_ita/items/05ce44c3eb1fd6e9dd46)  
+
+[雑に作って、それから作り込んで、最後にテストを書く「テストラスト」開発 - give IT a try](https://blog.jnito.com/entry/2023/02/16/171810)  
