--- a/DB_SQL/OTHER/速度.md
+++ b/DB_SQL/OTHER/速度.md
@@ -174,3 +174,103 @@ foreach(record in execsql("select * from products")){
 ---
 
 ソートはかなり重い処理に分類されるため、基本的に一番最後に行う。  
+
+---
+
+## UNION VS UNION ALL
+
+UNIONくっそ重いのでUNION ALL使おうねって話。  
+重複削除したかったらUNION ALLした後にDISTICTでもいいよね。  
+
+てかUNIONはJoinの度に重複削除するわけだから効率が悪い。  
+全部UNIONした後に重複削除で十分だ。  
+
+SQLServerのクエリ比較の結果、UNION ALLがバッチ相対0%なので、圧勝です。  
+実際に比較してみると、UNIONはマージやORDERまで結合ごとにやっているので、そりゃ重くなるわって話です。  
+
+``` sql
+-- バッチ相対 0%
+SELECT 'aaa' 
+UNION ALL
+SELECT 'ccc' 
+UNION ALL
+SELECT 'ddd'
+UNION ALL
+SELECT 'ddd'
+-- aaa
+-- ccc
+-- ddd
+-- ddd
+
+-- バッチ相対 100%
+SELECT 'aaa' 
+UNION 
+SELECT 'ccc' 
+UNION 
+SELECT 'ddd'
+UNION 
+SELECT 'ddd'
+-- aa
+-- aaa
+-- ccc
+-- ddd
+```
+
+UNIONのように重複削除したくば、全部UNIONしてからDISTINCTするだけで良くない、という話。
+
+``` sql
+SELECT DISTINCT
+    *
+FROM (
+    SELECT 'aaa'  AS aa
+    UNION ALL
+    SELECT 'ccc' 
+    UNION ALL
+    SELECT 'ddd'
+    UNION ALL
+    SELECT 'ddd'
+) AS a
+-- aa
+-- aaa
+-- ccc
+-- ddd
+```
+
+``` sql
+SELECT 'aaa' as A1,'bbb' AS A2,'ccc' AS A3
+GO
+-- A1    A2    A3
+-- aaa    bbb    ccc
+
+
+SELECT
+    [CD]
+FROM
+    (SELECT 'aaa' as A1,'bbb' AS A2,'ccc' AS A3) As a
+CROSS APPLY(
+    values
+    (A1),(A2),(A3)
+) AS [v] ([CD])
+GO
+-- CD
+-- aaa
+-- bbb
+-- ccc
+
+
+WITH TEMP
+AS (
+    SELECT 'aaa' as A1,'bbb' AS A2,'ccc' AS A3
+)
+SELECT
+    [CD]
+FROM TEMP
+CROSS APPLY(
+    values
+    (A1),(A2),(A3)
+) AS [v] ([CD])
+-- CD
+-- aaa
+-- bbb
+-- ccc
+```
