--- a/DB/SQLServer/構造関係/インデックスの比較.md
+++ b/DB/SQLServer/構造関係/インデックスの比較.md
@@ -6,7 +6,8 @@
 
 ## データベースのインデックス一覧を取得する
 
-[このサイト](https://sql55.com/query/sql-server-list-all-indexes.php)で紹介されている、実行したデータベースのインデックス情報を出力するクエリ  
+[このサイト](https://sql55.com/query/sql-server-list-all-indexes.php)で紹介されている例。  
+実行したデータベースのインデックス情報を出力するクエリとなる。  
 
 ``` sql
 SELECT
@@ -122,6 +123,30 @@ ORDER BY
     I.name
 ```
 
+``` sql
+DECLARE @Sourcedb sysname  = 'master';
+
+EXEC ('
+SELECT
+    S.name AS SchemaName,
+    O.name AS ObjectName,
+    I.name AS IndexName,
+    I.type_desc AS IndexTypeDesc,
+    I.is_primary_key AS IsPrimaryKey,
+    I.is_unique AS IsUnique,
+    I.is_disabled AS IsDisabled
+FROM
+    ' + @Sourcedb + '.sys.indexes AS I
+       INNER JOIN ' + @Sourcedb + '.sys.objects AS O
+          ON I.object_id = O.object_id
+       INNER JOIN ' + @Sourcedb + '.sys.schemas AS S
+          ON O.schema_id = S.schema_id
+WHERE
+    I.index_id > 0
+    AND O.is_ms_shipped = 0
+')
+```
+
 ---
 
 ## FULL OUTER JOIN 方式
@@ -234,10 +259,10 @@ ORDER BY
     isnull(SoSource.type,SoDestination.type)
 ```
 
+[index - Compare Indexes/Constraints between two SQL Server databases - Database Administrators Stack Exchange](https://dba.stackexchange.com/questions/76997/compare-indexes-constraints-between-two-sql-server-databases)  
+
 ---
 
 [SQL Server: データベース内の全てのインデックス (index) を取得する - 便利なT-SQL＆クエリー集 - SQL Server 入門](https://sql55.com/query/sql-server-list-all-indexes.php)  
-
-[index - Compare Indexes/Constraints between two SQL Server databases - Database Administrators Stack Exchange](https://dba.stackexchange.com/questions/76997/compare-indexes-constraints-between-two-sql-server-databases)  
 
 compare indexes between 2 databases sql server
